# ZXingBarcodeReader

./: CMakeLists.txt  Main.qml  barcodemanager.cpp  barcodemanager.h  generatedimageprovider.cpp  generatedimageprovider.h  imageprovider.cpp  imageprovider.h  main.cpp
